main changes for 1.0.3 update
Signed-off-by: Alex Nijjar <alexander.nijjar@icloud.com>